# cache

./: Cargo.toml  README.md
src/: cache.rs  folder_compatible.rs  hashmap_compatible.rs  lib.rs
