[package]
name = "cache"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
rmp-serde = "1.1.2"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
lru = "0.16.2"
either = "1.15.0"
thiserror = "2.0.17"

[dev-dependencies]
tempdir = "0.3.7"
